Fix side navigation Firefox bug

--- a/src/css/components/_side-nav.scss
+++ b/src/css/components/_side-nav.scss
@@ -5,6 +5,7 @@
 
 
 .c-side-nav {
+  display: flex;
   position: relative;
 
   // Component size
